--- a/src/Flexy.API/Pages/Index.cshtml
+++ b/src/Flexy.API/Pages/Index.cshtml
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
 
-<div id="app">
+<div id="app" class="app">
     <rheader></rheader>
     <left-aside></left-aside>
     <div class="common">
@@ -22,6 +22,30 @@
 
 
 <style>
+  .app {
+      
+  }
+  
+  .f1 {
+    font-family: Cabin;
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 36px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #FFFFFF;
+  }
+
+  .f2 {
+    font-family: Cabin;
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 36px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: #E2B988;
+  }
+
   .common {
     padding-top: 100px;
     padding-left: 256px;
