--- a/src/Flexy.API/Pages/Shared/_Layout.cshtml
+++ b/src/Flexy.API/Pages/Shared/_Layout.cshtml
@@ -4,8 +4,8 @@
     @await RenderSectionAsync("Styles", required: false)
 <!-- import CSS -->
 @*<link rel="stylesheet" href="~/dist/bundle.css" />*@
-<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
-
+@*<link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">*@
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Cabin" />
 <!-- import JavaScript -->
 @*
 <script src="~/dist/bundle.js"></script>
@@ -20,8 +20,16 @@
 </html>
 
 <style>
+
+    html {
+        background: #181C1F !important;
+    }
+
     body {
         display: block;
         margin: 0px !important;
+        background-color: #181C1F;
+        height: 100%;
+        font-family: Cabin !important;
     }
 </style>
